# racon2

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
eval/: Pipfile  pyproject.toml
eval/src/: exceptions.py  main.py  utils.py
eval/src/task/: exceptions.py  schemas.py  service.py
src/: data.cpp  data.hpp  dataset.cpp  dataset.hpp  io.cpp  io.hpp  logger.cpp  logger.hpp  main.cpp  overlap.cpp  overlap.hpp  polisher.cpp  polisher.hpp  sequence.cpp  sequence.hpp  version.h.in  window.cpp  window.hpp
src/cuda/: cudaaligner.cpp  cudaaligner.hpp  cudabatch.cpp  cudabatch.hpp  cudapolisher.cpp  cudapolisher.hpp  cudautils.hpp
test/: racon_test.cpp
